# ai-camera

./: README.md
.claude/: settings.local.json
main/: CMakeLists.txt  camera_app.c  camera_app.h  main.c  mqtt_app.c  mqtt_app.h
